MDEV-9093 Persistent computed column is not updated when update query contains join

added lost virtual fields update call